# minimal-rust-wasm

./: .gitignore  Cargo.toml  README.md
