[package]
name = "minimal-rust-wasm"
description = "An extremely minimal Rust + WASM example."
repository = "https://github.com/tuzz/minimal-rust-wasm"
version = "0.2.0"
license = "MIT"
authors = ["Chris Patuzzo <chris@patuzzo.co.uk>"]
edition = "2018"

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/wasm_main.rs"

[dependencies]
wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3.40"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
